<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShoeDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ui.ShoeListViewModel" />
    </data>

    <!-- Use ConstraintLayout to avoid a nested LinearLayout with the buttons -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_padding">

        <TextView
            android:id="@+id/name_label_textview"
            style="@style/TextViewStyle.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/name_edittext"
            android:text="@string/shoe_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label_textview" />

        <TextView
            android:id="@+id/company_label_textview"
            style="@style/TextViewStyle.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/company_edittext"
            android:text="@string/company_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edittext" />

        <EditText
            android:id="@+id/company_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_label_textview" />

        <TextView
            android:id="@+id/size_label_textview"
            style="@style/TextViewStyle.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/size_edittext"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_edittext" />

        <EditText
            android:id="@+id/size_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_label_textview" />

        <TextView
            android:id="@+id/description_label_textview"
            style="@style/TextViewStyle.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/description_edittext"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_edittext" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_padding"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label_textview" />


        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/very_large_padding"
            android:onClick="@{() -> viewModel.cancelShoeCreation()}"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_edittext" />

        <Button
            android:id="@+id/save_button"
            style="@style/ButtonStyle"
            android:onClick="@{() -> viewModel.addShoeToList()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>